// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createColumnLocator > creates valid group column locator for second-level group in table with column attributes 1`] = `
[
  {
    "attributeLocatorItem": {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
  {
    "attributeLocatorItem": {
      "attributeIdentifier": "a_label.owner.region",
      "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
]
`;

exports[`createColumnLocator > creates valid group column locator for top-level group in table with column attributes 1`] = `
[
  {
    "attributeLocatorItem": {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
]
`;

exports[`createColumnLocator > creates valid leaf column locator in table with column attributes 1`] = `
[
  {
    "attributeLocatorItem": {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
  {
    "attributeLocatorItem": {
      "attributeIdentifier": "a_label.owner.region",
      "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
  {
    "measureLocatorItem": {
      "measureIdentifier": "m_aangOxLSeztu",
    },
  },
]
`;

exports[`createColumnLocator > creates valid leaf column locator in table without column attributes 1`] = `
[
  {
    "measureLocatorItem": {
      "measureIdentifier": "m_aangOxLSeztu",
    },
  },
]
`;
